@@ -1,3 +1,7 @@
+2011-04-22  Dmitry Dulepov	<dmitry.dulepov@gmail.com>
+
+	* Added feature #18109: Allow per domain redirects
+
 2011-04-19	Dmitry Dulepov	<dmitry.dulepov@gmail.com>
 
 	* Fixed bug #18081: With default config RealURL accepts pages with .html suffix as long as with /
